@@ -1,3 +1,11 @@
+2002-05-29  Michael Meeks  <michael@ximian.com>
+
+	* libnautilus-private/nautilus-file.c
+	(nautilus_file_mark_gone): remove the file from
+	the link hash if it is going, since we bin the
+	file info here and thus can't remove it later
+	#74120
+
 2002-05-28  Laszlo Peter  <laca@sun.com>
 
 	* libnautilus-private/nautilus-thumbnails.c: #include <signal.h> for
